map vis and date picker implemented

--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <script src="https://unpkg.com/topojson@3.0.2/dist/topojson.min.js"></script>
   </head>
   <body>
-    <svg width="960" height="500"></svg>
+    <span class="vis-title">COVID-19 Outbreak</span>
+    <div class="vis-container">
+      <svg width="100%" height="100%" viewBox="0 0 960 500" lass="map-svg"></svg>
+
+    </div>
+    <div class="date-container">
+      <div class="date-circle"></div>
+      <div class="date-circle"></div>
+      <div class="date-circle"></div>
+      <div class="date-circle"></div>
+      <div class="date-circle"></div>
+      <div class="date-circle"></div>
+      <div class="date-circle"></div>
+      <div class="date-circle"></div>
+
+    </div>
+
     <script src="bundle.js"></script>
   </body>
 </html>
