--- a/index.html
+++ b/index.html
@@ -1,28 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Cheap Tricks for Interaction</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://unpkg.com/d3@5.6.0/dist/d3.min.js"></script>
-    <script src="https://unpkg.com/topojson@3.0.2/dist/topojson.min.js"></script>
-  </head>
-  <body>
-    <span class="vis-title">COVID-19 Outbreak</span>
-    <div class="vis-container">
-      <svg width="100%" height="100%" viewBox="0 0 960 500" lass="map-svg"></svg>
+    <head>
+        <title>COVID-19</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="https://d3js.org/queue.v1.min.js"></script>
+        <script src="https://d3js.org/topojson.v1.min.js"></script>
+        <script src="d3-tip.js"></script>
+    </head>
+    <body>
+        <h1 class="title">COVID-19 Outbreak</h1>
+        <div id="vis">
+            <div class="legend">
+                <div class="legend-label-container">
+                    <span id="confirmed-label" class="legend-label"> Confirmed Cases </span>
+                    <span class="legend-label">500,000+</span>
+                    <span class="legend-label">250,000 - 500,000</span>
+                    <span class="legend-label">100,000 - 250,000</span>
+                    <span class="legend-label">50,000 - 100,000</span>
+                    <span class="legend-label">10,000 - 50,000</span>
+                    <span class="legend-label">5000 - 10,000</span>
+                    <span class="legend-label">1000 - 5000</span>
+                    <span class="legend-label">500 - 1000</span>
+                    <span class="legend-label">100 - 500</span>
+                    <span class="legend-label">50 - 100</span>
+                    <span class="legend-label">1 - 50</span>
+                    <span class="legend-label">0</span>
 
-    </div>
-    <div class="date-container">
-      <div class="date-circle"></div>
-      <div class="date-circle"></div>
-      <div class="date-circle"></div>
-      <div class="date-circle"></div>
-      <div class="date-circle"></div>
-      <div class="date-circle"></div>
-      <div class="date-circle"></div>
-      <div class="date-circle"></div>
+                </div>
+                <div class="legend-icon-container">
+                    <div class="legend-icon" style="background-color: #350101;"></div>
+                    <div class="legend-icon" style="background-color: #5C0101;"></div>
+                    <div class="legend-icon" style="background-color: #8A0202;"></div>
+                    <div class="legend-icon" style="background-color: #B30303;"></div>
+                    <div class="legend-icon" style="background-color: #E41818;"></div>
+                    <div class="legend-icon" style="background-color: #E73636;"></div>
+                    <div class="legend-icon" style="background-color: #E95757;"></div>
+                    <div class="legend-icon" style="background-color: #EB7979;"></div>
+                    <div class="legend-icon" style="background-color: #EE9495;"></div>
+                    <div class="legend-icon" style="background-color: #F0B7B8;"></div>
+                    <div class="legend-icon" style="background-color: #F3D9DA;"></div>
+                    <div class="legend-icon" style="background-color: #F7F7F7;"></div>
 
-    </div>
-    <script src="bundle.js"></script>
-  </body>
+                </div>
+            </div>
+        </div>
+        <div class="timeline-container">
+            <div id="bar" class="bar"></div>
+            <div id="j22" class="date-circle"></div>
+            <div id="j29" class="date-circle"></div>
+            <div id="f5" class="date-circle"></div>
+            <div id="f12" class="date-circle"></div>
+            <div id="f19" class="date-circle"></div>
+            <div id="f26" class="date-circle"></div>
+            <div id="m4" class="date-circle"></div>
+            <div id="m11" class="date-circle"></div>
+            <div id="m18" class="date-circle"></div>
+            <div id="m25" class="date-circle"></div>
+            <div id="a1" class="date-circle"></div>
+            <div id="a8" class="date-circle"></div>
+        </div>
+        <div class="label-container">
+            <span>Jan.22</span>
+            <span>Jan.29</span>
+            <span>Feb.5</span>
+            <span>Feb.12</span>
+            <span>Feb.19</span>
+            <span>Feb.26</span>
+            <span>Mar.4</span>
+            <span>Mar.11</span>
+            <span>Mar.18</span>
+            <span>Mar.25</span>
+            <span>Apr.1</span>
+            <span>Apr.8</span>
+        </div>
+        <script src="index.js"></script>
+
+    </body>
 </html>
